Fix: text overflow

--- a/src/components/WorksCategory/CategoryItem.scss
+++ b/src/components/WorksCategory/CategoryItem.scss
@@ -12,7 +12,7 @@
   );
   height: 600px;
   border-radius: 22px;
-  transition: border 0.3s;
+  transition: border 0.2s;
   border: transparent 1px solid;
 
   @media screen and (max-width: 960px) {
@@ -22,7 +22,6 @@
   > h4 {
     color: #cc84ff;
     font-size: 4rem;
-    overflow-wrap: anywhere;
 
     @media screen and (max-width: 960px) {
       font-size: 3rem;
